--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -85,7 +85,7 @@ specs:
   - mne-rsa =0.9
   - mne-ari =0.1.2
   - mne-kit-gui =1.2.0
-  - mayavi =4.8.1
+  - mayavi =4.8.1=*_8
   - mne-icalabel =0.6.0
   - mne-gui-addons =0.1.0
   - mne-lsl =1.2.0
