--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -1,4 +1,4 @@
-version: 1.6.1_1
+version: 1.7.0_0
 name: MNE-Python
 company: MNE-Python Developers
 # When the version above changes to a new major/minor, it needs to be updated
@@ -18,11 +18,11 @@ conclusion_file: ../../assets/conclusion.rtf   # [not win]
 initialize_by_default: false
 register_python_default: false
 
-default_prefix: ${HOME}/mne-python/1.6.1_1                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.6.1_1"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.6.1_1"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.6.1_1"  # [win]
-default_location_pkg: "Applications/MNE-Python/1.6.1_1"             # [osx]
+default_prefix: ${HOME}/mne-python/1.7.0_0                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.7.0_0"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.7.0_0"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.7.0_0"  # [win]
+default_location_pkg: "Applications/MNE-Python/1.7.0_0"             # [osx]
 pkg_name: ".mne-python"                                             # [osx]
 progress_notifications: true                                        # [osx]
 install_path_exists_error_text: |
@@ -30,10 +30,10 @@ install_path_exists_error_text: |
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.6.1_1-macOS_Intel.pkg  # [osx and not arm64]
-installer_filename: MNE-Python-1.6.1_1-macOS_M1.pkg     # [osx and arm64]
-installer_filename: MNE-Python-1.6.1_1-Windows.exe      # [win]
-installer_filename: MNE-Python-1.6.1_1-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.7.0_0-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.7.0_0-macOS_M1.pkg     # [osx and arm64]
+installer_filename: MNE-Python-1.7.0_0-Windows.exe      # [win]
+installer_filename: MNE-Python-1.7.0_0-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -69,8 +69,8 @@ specs:
   # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne =1.6.1=*_0
-  - mne-installer-menus =1.6.1=*_0
+  - mne =1.7.0=*_0
+  - mne-installer-menus =1.7.0=*_0
   # For testing purposes with build_local.sh, you can comment out all deps
   # below for speed, and change mne to mne-base above
   - mne-bids =0.14
@@ -107,7 +107,7 @@ specs:
   - numba =0.59.1
   - cython =3.0.10
   # I/O
-  - pyxdf =1.16.5
+  - pyxdf =1.16.6
   - openpyxl =3.1.2
   - xlrd =2.0.1
   - snirf =0.7.4
@@ -135,7 +135,7 @@ specs:
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.7
   # GitHub client, https://cli.github.com
-  - gh =2.47.0
+  - gh =2.48.0
   # NeuroSpin needs the following
   - questionary =2.0.1
   - pqdm =0.2.0
@@ -143,7 +143,7 @@ specs:
   - matplotlib =3.8.4
   - ipympl =0.9.4
   - seaborn =0.13.2
-  - plotly =5.19.0
+  - plotly =5.21.0
   - vtk =9.2.6
   - git =2.44.0  # [win]
   - make =4.3  # [win]
@@ -155,14 +155,15 @@ specs:
   - trame-vuetify =2.4.3
   - termcolor =2.4.0
   - pyobjc-core =10.2  # [osx]
+  - defusedxml =0.7.1
   # Development
   - setuptools_scm =8.0.4
-  - pytest =7.4.4
+  - pytest =8.1.1
   - pytest-cov =5.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =3.7.0
-  - ruff =0.3.7
+  - ruff =0.4.1
   - check-manifest =0.49.0
   - codespell =2.2.6
   - nitime =0.10.2
@@ -170,7 +171,7 @@ specs:
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
   - twine =5.0.0
-  - hatchling =1.24.0
+  - hatchling =1.24.1
   - hatch-vcs =0.4.0
   - mypy =1.9.0
   - towncrier =23.11.0
@@ -191,4 +192,4 @@ condarc:
     - conda-forge
   channel_priority: strict
   allow_other_channels: false
-  env_prompt: "(mne-1.6.1_1) "
+  env_prompt: "(mne-1.7.0_0) "
