--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -98,7 +98,7 @@ specs:
   - openblas =0.3.27
   - libblas =3.9.0=*openblas
   - jupyter =1.0.0
-  - jupyterlab =4.1.6
+  - jupyterlab =4.1.8
   - ipykernel =6.29.3
   - spyder-kernels =2.5.1
   - spyder =5.5.4
@@ -114,7 +114,7 @@ specs:
   # Statistics
   - pingouin =0.5.4
   # MRI
-  - fsleyes =1.10.4
+  - fsleyes =1.11.0
   - dcm2niix =1.0.20240202
   - dipy =1.9.0
   # Time-frequency analysis
@@ -148,22 +148,22 @@ specs:
   - git =2.44.0  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.1.2
-  - pyvista =0.43.5
+  - pyvista =0.43.6
   - pyvistaqt =0.11.0
   - trame =3.6.0
-  - trame-vtk =2.8.5
+  - trame-vtk =2.8.6
   - trame-vuetify =2.4.3
   - termcolor =2.4.0
   - pyobjc-core =10.2  # [osx]
   - defusedxml =0.7.1
   # Development
   - setuptools_scm =8.0.4
-  - pytest =8.1.1
+  - pytest =8.2.0
   - pytest-cov =5.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =3.7.0
-  - ruff =0.4.1
+  - ruff =0.4.2
   - check-manifest =0.49.0
   - codespell =2.2.6
   - nitime =0.10.2
@@ -173,15 +173,15 @@ specs:
   - twine =5.0.0
   - hatchling =1.24.2
   - hatch-vcs =0.4.0
-  - mypy =1.9.0
+  - mypy =1.10.0
   - towncrier =23.11.0
+  - vulture =0.10
   # Doc building
   - numpydoc =1.7.0
   - pydata-sphinx-theme =0.15.2
   - graphviz =9.0.0
   - python-graphviz =0.20.3
-  - selenium =4.19.0
-  - sphinx =7.2.6
+  - sphinx =7.3.7
   - sphinx-design =0.5.0
   - sphinx-gallery =0.15.0
   - sphinxcontrib-bibtex =2.6.2
