--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -1,4 +1,4 @@
-name: Outdated
+name: autofix.ci
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
   cancel-in-progress: true
