--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -80,10 +80,10 @@ specs:
   # - mne-faster =1.1.0  # Not 1.7.0-compatible
   - mne-nirs =0.6.0
   - mne-features =0.3
-  - mne-rsa =0.91
+  - mne-rsa =0.9.1
   - mne-ari =0.1.2
   - mne-kit-gui =1.2.0
-  - mayavi =4.8.2=*_8
+  - mayavi =4.8.2
   - mne-icalabel =0.6.0
   - mne-gui-addons =0.1.0
   - mne-lsl =1.3.1
