--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -225,37 +225,16 @@ jobs:
   release:
     name: Release
     needs: [build_macos, build_linux, build_windows, test_macos, test_linux, test_windows]
-    if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -el {0}
     steps:
       # These names should correspond to MNE_INSTALLER_ARTIFACT_ID in tools/extract_version.sh
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: MNE-Python-Linux-x86_64
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-Linux-x86_64-json
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-Windows-x86_64
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-Windows-x86_64-json
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-macOS-x86_64
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-macOS-x86_64-json
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-macOS-arm64
-      - uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-macOS-arm64-json
+          name: MNE-Python-*
+          merge-multiple: true
       - run: ls -al ./
       - uses: ncipollo/release-action@v1
         with:
@@ -265,3 +244,4 @@ jobs:
           prerelease: true
           allowUpdates: true
           generateReleaseNotes: true
+        if: github.ref_type == 'tag'
