--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -135,6 +135,7 @@ specs:
   - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.9
+  - mnelab =0.9.1
   # GitHub client, https://cli.github.com
   - gh =2.52.0
   # NeuroSpin needs the following
@@ -146,7 +147,7 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.8.4
   - tornado =6.4.1
-  - pyside6 =6.7.2
+  - pyside6 =6.7.2=*_1
   - qt6-main =6.7.2
   - ipympl =0.9.4
   - qtpy =2.4.1
