--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,6 +154,7 @@ jobs:
         with:
           qt: true
           pyvista: false
+      - run: conda list && conda remove -y qt-main
       - run: ./tools/check_installation.sh
 
   test_linux:
