--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -148,10 +148,9 @@ specs:
   - questionary =2.0.1
   - pqdm =0.2.0
   # Viz
-  # TODO: unknown why 3.9.0 isn't working as of 2024/07/06
   # matplotilb is just matplotlib-base, tornado, and pyqt
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  - matplotlib-base =3.9.1
+  - matplotlib-base =3.9.0
   - tornado =6.4.1
   - pyside6 =6.7.2=*_1
   - qt6-main =6.7.2
@@ -159,7 +158,7 @@ specs:
   - qtpy =2.4.1
   - seaborn =0.13.2
   - plotly =5.22.0
-  - vtk =9.3.1
+  - vtk =9.3.0=qt*
   - git =2.45.2  # [win]
   - make =4.3  # [win]
   - ipywidgets =8.1.3
