--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -86,7 +86,7 @@ specs:
   - mne-lsl =1.4.0
   - autoreject =0.4.3
   - mne-kit-gui =1.2.0
-  - mayavi =4.8.2=pyside6_*_204
+  - mayavi =4.8.2=pyside6_*
   - traitsui =8.0.0
   - pyface =8.0.0=*_1
   - pyriemann =0.6
