--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -82,7 +82,7 @@ specs:
   - mne-rsa =0.9.1
   - mne-ari =0.1.2
   - mne-icalabel =0.6.0
-  - mne-gui-addons =0.1.0=*_1
+  - mne-gui-addons =0.1=*_1
   - mne-lsl =1.4.0
   - autoreject =0.4.3
   - mne-kit-gui =1.2.0
@@ -142,8 +142,6 @@ specs:
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.9
   - mnelab =0.9.1
-  # GitHub client, https://cli.github.com
-  - gh =2.52.0
   # NeuroSpin needs the following
   - questionary =2.0.1
   - pqdm =0.2.0
@@ -159,8 +157,6 @@ specs:
   - seaborn =0.13.2
   - plotly =5.22.0
   - vtk =9.3.0=qt*
-  - git =2.45.2  # [win]
-  - make =4.3  # [win]
   - ipywidgets =8.1.3
   - pyvista =0.44.0
   - pyvistaqt =0.11.1
@@ -168,11 +164,9 @@ specs:
   - trame-vtk =2.8.9
   - trame-vuetify =2.6.1
   - termcolor =2.4.0
-  - pyobjc-core =10.3.1  # [osx]
-  - pyobjc-framework-Cocoa =10.3.1  # [osx]
-  - pyobjc-framework-FSEvents =10.3.1  # [osx]
   - defusedxml =0.7.1
   # Development
+  - gh =2.52.0
   - setuptools_scm =8.1.0
   - pytest =8.2.2
   - pytest-cov =5.0.0
@@ -206,6 +200,12 @@ specs:
   - sphinx-copybutton =0.5.2
   - sphinxcontrib-youtube =1.4.1
   - intersphinx-registry =0.2406.4
+  # OS-specific
+  - git =2.45.2  # [win]
+  - make =4.3  # [win]
+  - pyobjc-core =10.3.1  # [osx]
+  - pyobjc-framework-Cocoa =10.3.1  # [osx]
+  - pyobjc-framework-FSEvents =10.3.1  # [osx]
 condarc:
   channels:
     - conda-forge
