--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,7 +154,6 @@ jobs:
         with:
           qt: true
           pyvista: false
-      - run: source "${MNE_ACTIVATE}" && conda list && conda remove -y qt-main
       - run: ./tools/check_installation.sh
 
   test_linux:
@@ -221,6 +220,7 @@ jobs:
           qt: true
           pyvista: false
       - run: ./tools/check_installation.sh
+        timeout-minutes: 5  # < 2 min even on Windows
 
   # Release
   release:
