--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -85,7 +85,7 @@ specs:
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.4.0
   - autoreject =0.4.3
-  - mne-kit-gui =1.2.0
+  - mne-kit-gui =1.2.0=*_2
   - mayavi =4.8.2=pyside6_*
   - traitsui =8.0.0
   - pyface =8.0.0=*_1
