--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mamba-org/setup-micromamba@v1
         with:
-          condarc: |
-            channels:
-              - conda-forge
-            channel_priority: strict
           environment-file: environment.yml
       - run: ./tools/extract_version.sh
       - run: ./tools/macos_install_certificates.sh
@@ -85,10 +81,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mamba-org/setup-micromamba@v1
         with:
-          condarc: |
-            channels:
-              - conda-forge
-            channel_priority: strict
           environment-file: environment.yml
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
@@ -113,10 +105,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mamba-org/setup-micromamba@v1
         with:
-          condarc: |
-            channels:
-              - conda-forge
-            channel_priority: strict
           environment-file: environment.yml
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
@@ -232,6 +220,7 @@ jobs:
           qt: true
           pyvista: false
       - run: ./tools/check_installation.sh
+        timeout-minutes: 5  # < 2 min even on Windows
 
   # Release
   release:
