--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -55,7 +55,6 @@ channels:
   # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-
 specs:
   # Python
   - python =3.12.4
@@ -72,6 +71,9 @@ specs:
   - mne-installer-menus =1.7.1=*_0
   # For testing purposes with build_local.sh, you can comment out all deps
   # below for speed, and change mne to mne-base above
+
+  # vvv this line is special and used by MNE-Python, do not change it!
+  # <<< BEGIN RELATED SOFTWARE LIST >>>
   - mne-bids =0.15.0
   - mne-bids-pipeline =1.9.0
   - mne-qt-browser =0.6.3
@@ -86,41 +88,6 @@ specs:
   - mne-lsl =1.4.0
   - autoreject =0.4.3
   - mne-kit-gui =1.2.0=*_2
-  - mayavi =4.8.2=pyside6_*
-  - traitsui =8.0.0
-  - pyface =8.0.0=*_1
-  - pyriemann =0.6
-  - pyprep =0.4.3=*_1
-  - python-picard =0.7
-  - pybv =0.7.5
-  - eeglabio =0.0.2.post4
-  - imageio-ffmpeg =0.5.1
-  - mffpy =0.9.0
-  - openmeeg =2.5.12
-  - python-neo =0.13.1
-  - pandas =2.2.2
-  - polars =1.1.0
-  - scipy =1.14.0
-  - openblas =0.3.27
-  - libblas =3.9.0=*openblas
-  - jupyter =1.0.0
-  - jupyterlab =4.2.3
-  - ipykernel =6.29.5
-  - spyder-kernels =2.5.2
-  # TODO: Needs to not require pyqt
-  # https://github.com/spyder-ide/spyder/issues/20201
-  # spyder =5.5.5
-  - darkdetect =0.8.0
-  - qdarkstyle =3.2.3
-  - numba =0.60.0
-  - cython =3.0.10
-  # I/O
-  - pyxdf =1.16.6
-  - openpyxl =3.1.4
-  - xlrd =2.0.1
-  - snirf =0.8.0
-  # Statistics
-  - pingouin =0.5.4
   # MRI
   - fsleyes =1.12.4
   - dcm2niix =1.0.20240202
@@ -143,6 +110,46 @@ specs:
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.9
   - mnelab =0.9.1
+  # other
+  - pyriemann =0.6
+  - pyprep =0.4.3=*_1
+  - python-picard =0.7
+  - pybv =0.7.5
+  - eeglabio =0.0.2.post4
+  - mffpy =0.9.0
+  - openmeeg =2.5.12
+  - python-neo =0.13.1
+  - nitime =0.10.2
+  - snirf =0.8.0
+  # <<< END RELATED SOFTWARE LIST >>>
+  # ^^^ this line is special and used by MNE-Python, do not change it!
+
+  - mayavi =4.8.2=pyside6_*
+  - traitsui =8.0.0
+  - pyface =8.0.0=*_1
+  - imageio-ffmpeg =0.5.1
+  - pandas =2.2.2
+  - polars =1.1.0
+  - scipy =1.14.0
+  - openblas =0.3.27
+  - libblas =3.9.0=*openblas
+  - jupyter =1.0.0
+  - jupyterlab =4.2.3
+  - ipykernel =6.29.5
+  - spyder-kernels =2.5.2
+  # TODO: Needs to not require pyqt
+  # https://github.com/spyder-ide/spyder/issues/20201
+  # spyder =5.5.5
+  - darkdetect =0.8.0
+  - qdarkstyle =3.2.3
+  - numba =0.60.0
+  - cython =3.0.10
+  # I/O
+  - pyxdf =1.16.8
+  - openpyxl =3.1.4
+  - xlrd =2.0.1
+  # Statistics
+  - pingouin =0.5.4
   # NeuroSpin needs the following
   - questionary =2.0.1
   - pqdm =0.2.0
@@ -167,7 +174,7 @@ specs:
   - termcolor =2.4.0
   - defusedxml =0.7.1
   # Development
-  - gh =2.52.0
+  - gh =2.53.0
   - setuptools_scm =8.1.0
   - pytest =8.2.2
   - pytest-cov =5.0.0
@@ -178,7 +185,6 @@ specs:
   - uv =0.2.25
   - check-manifest =0.49.0
   - codespell =2.3.0
-  - nitime =0.10.2
   - py-spy =0.3.14
   - line_profiler =4.1.1
   - memory_profiler =0.61.0
