--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -200,7 +200,7 @@ specs:
   - graphviz =12.0.0
   - python-graphviz =0.20.3
   - selenium =4.23.1
-  - sphinx =8.0.2
+  - sphinx =7.4.7  # allow_outdated, sphinx-design not compatible yet
   - sphinx-design =0.6.1
   - sphinx-gallery =0.17.1
   - sphinxcontrib-bibtex =2.6.2
