--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -164,7 +164,7 @@ specs:
   - qtpy =2.4.1
   - seaborn =0.13.2
   - plotly =5.23.0
-  - vtk =9.3.0=qt*
+  - vtk =9.3.1=qt*
   - ipywidgets =8.1.3
   - pyvista =0.44.1
   - pyvistaqt =0.11.1
@@ -200,7 +200,7 @@ specs:
   - graphviz =12.0.0
   - python-graphviz =0.20.3
   - selenium =4.23.1
-  - sphinx =8.0.2
+  - sphinx =7.4.7  # allow_outdated, incompatible with sphinx-design
   - sphinx-design =0.6.1
   - sphinx-gallery =0.17.1
   - sphinxcontrib-bibtex =2.6.2
