--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor >=3.6.0
-  - conda-standalone >=23.11.0
-  - menuinst
-  - conda >=23.11.0
-  - fmt !=10.2.0
+  - constructor ==3.8.0
+  - conda-standalone ==24.4.0
+  - menuinst ==2.1.1
+  - conda ==24.5.0
+  - nsis ==3.08
