--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor ==3.8.0
-  - conda-standalone ==24.4.0
-  - menuinst ==2.1.1
-  - conda ==24.5.0
-  - nsis ==3.08
+  - constructor =3.8.0
+  - conda-standalone =24.4.0
+  - menuinst =2.1.1
+  - conda =24.5.0
+  - nsis =3.08
