--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -192,7 +192,7 @@ specs:
   - hatchling =1.25.0
   - hatch-vcs =0.4.0
   - mypy =1.11.1
-  - towncrier =23.11.0
+  - towncrier =23.11.0  # allow_outdated, 24.7.1 doesn't work with sphinxcontrib-towncrier
   - vulture =2.11
   # Doc building
   - numpydoc =1.8.0
@@ -200,7 +200,7 @@ specs:
   - graphviz =12.0.0
   - python-graphviz =0.20.3
   - selenium =4.23.1
-  - sphinx =7.4.7
+  - sphinx =7.4.7  # allow_outdated, sphinx-design not 8.0 compatible
   - sphinx-design =0.6.1
   - sphinx-gallery =0.17.1
   - sphinxcontrib-bibtex =2.6.2
