--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -87,7 +87,7 @@ specs:
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.5.0
   - autoreject =0.4.3
-  - mne-kit-gui =1.2.0=*_2
+  - mne-kit-gui =1.3.0
   # MRI
   - fsleyes =1.12.4
   - dcm2niix =1.0.20240202
