--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -1,4 +1,4 @@
-version: 1.7.1_0
+version: 1.8.0_0
 name: MNE-Python
 company: MNE-Python Developers
 # When the version above changes to a new major/minor, it needs to be updated
@@ -18,11 +18,11 @@ conclusion_file: ../../assets/conclusion.rtf   # [not win]
 initialize_by_default: false
 register_python_default: false
 
-default_prefix: ${HOME}/mne-python/1.7.1_0                          # [linux]
-default_prefix: "%USERPROFILE%\\mne-python\\1.7.1_0"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.7.1_0"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.7.1_0"  # [win]
-default_location_pkg: "Applications/MNE-Python/1.7.1_0"             # [osx]
+default_prefix: ${HOME}/mne-python/1.8.0_0                          # [linux]
+default_prefix: "%USERPROFILE%\\mne-python\\1.8.0_0"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\1.8.0_0"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.8.0_0"  # [win]
+default_location_pkg: "Applications/MNE-Python/1.8.0_0"             # [osx]
 pkg_name: ".mne-python"                                             # [osx]
 progress_notifications: true                                        # [osx]
 install_path_exists_error_text: |
@@ -30,10 +30,10 @@ install_path_exists_error_text: |
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_filename: MNE-Python-1.7.1_0-macOS_Intel.pkg  # [osx and not arm64]
-installer_filename: MNE-Python-1.7.1_0-macOS_M1.pkg     # [osx and arm64]
-installer_filename: MNE-Python-1.7.1_0-Windows.exe      # [win]
-installer_filename: MNE-Python-1.7.1_0-Linux.sh         # [linux]
+installer_filename: MNE-Python-1.8.0_0-macOS_Intel.pkg  # [osx and not arm64]
+installer_filename: MNE-Python-1.8.0_0-macOS_M1.pkg     # [osx and arm64]
+installer_filename: MNE-Python-1.8.0_0-Windows.exe      # [win]
+installer_filename: MNE-Python-1.8.0_0-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
@@ -67,8 +67,8 @@ specs:
   # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne =1.7.1=pyside6_*_102
-  - mne-installer-menus =1.7.1=*_0
+  - mne =1.8.0=pyside6_*_100
+  - mne-installer-menus =1.8.0=*_100
   # For testing purposes with build_local.sh, you can comment out all deps
   # below for speed, and change mne to mne-base above
 
@@ -86,8 +86,8 @@ specs:
   - mne-icalabel =0.7.0
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.5.0
+  - mne-kit-gui =1.3.0
   - autoreject =0.4.3
-  - mne-kit-gui =1.2.0=*_2
   # MRI
   - fsleyes =1.12.4
   - dcm2niix =1.0.20240202
@@ -108,7 +108,7 @@ specs:
   - sleepecg =0.5.8
   - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
-  - neurokit2 =0.2.9
+  - neurokit2 =0.2.10
   - mnelab =0.9.1
   # other
   - pyriemann =0.6
@@ -129,9 +129,9 @@ specs:
   - pyface =8.0.0=*_1
   - imageio-ffmpeg =0.5.1
   - pandas =2.2.2
-  - polars =1.2.1
+  - polars =1.4.0
   - scipy =1.14.0
-  - openblas =0.3.27
+  - openblas =0.3.27  # allow_outdated, scipy / numpy not updated yet
   - libblas =3.9.0=*openblas
   - jupyter =1.0.0
   - jupyterlab =4.2.4
@@ -156,7 +156,7 @@ specs:
   # Viz
   # matplotilb is just matplotlib-base, tornado, and pyqt
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  - matplotlib-base =3.9.1
+  - matplotlib-base =3.9.2
   - tornado =6.4.1
   - pyside6 =6.7.2=*_1
   - qt6-main =6.7.2
@@ -181,8 +181,8 @@ specs:
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =3.8.0
-  - ruff =0.5.7
-  - uv =0.2.36
+  - ruff =0.6.1
+  - uv =0.2.37
   - check-manifest =0.49.0
   - codespell =2.3.0
   - py-spy =0.3.14
@@ -218,4 +218,4 @@ condarc:
     - conda-forge
   channel_priority: strict
   allow_other_channels: false
-  env_prompt: "(mne-1.7.1_0) "
+  env_prompt: "(mne-1.8.0_0) "
