--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -88,6 +88,7 @@ specs:
   - mne-lsl =1.5.0
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
+  - antio =0.3.1
   # MRI
   - fsleyes =1.12.4
   - dcm2niix =1.0.20240202
