--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -88,6 +88,7 @@ specs:
   - mne-lsl =1.5.0
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
+  - antio =0.3.1
   # MRI
   - fsleyes =1.12.4
   - dcm2niix =1.0.20240202
@@ -171,7 +172,7 @@ specs:
   - pyvistaqt =0.11.1
   - trame =3.6.3
   - trame-vtk =2.8.10
-  - trame-vuetify =2.7.0
+  - trame-vuetify =2.7.1
   - termcolor =2.4.0
   - defusedxml =0.7.1
   # Development
@@ -183,7 +184,7 @@ specs:
   - pytest-timeout =2.3.1
   - pre-commit =3.8.0
   - ruff =0.6.2
-  - uv =0.4.2
+  - uv =0.4.4
   - check-manifest =0.49.0
   - codespell =2.3.0
   - py-spy =0.3.14
