--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -89,6 +89,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.4.0
+  - meegkit =0.1.7
   # MRI
   - fsleyes =1.13.0
   - dcm2niix =1.0.20240202
