--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor >=3.6.0,!=3.11.0
+  - constructor >=3.6.0
   - conda-libmamba-solver
   - conda-standalone >=23.11.0,!=24.11.0
   - menuinst
