--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 
 dependencies:
   - constructor >=3.6.0
-  - conda-libmamba-solver <=24.9
+  - conda-libmamba-solver
   - conda-standalone >=23.11.0,!=24.11.0
   - menuinst
   - conda >=23.11.0
