--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -59,8 +59,8 @@ specs:
   # Python
   - python =3.12.7  # allow_outdated
   - pip =24.3.1
-  - conda =24.9.2  # allow_outdated, https://github.com/conda-forge/conda-feedstock/pull/243#issuecomment-2499270117
-  - mamba =1.5.10  # allow_outdated, 2.0 has issues needing a libmamba that is missing
+  - conda =24.11.0
+  - mamba =2.0.4
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -90,6 +90,7 @@ specs:
   - autoreject =0.4.3
   - antio =0.4.0
   - meegkit =0.1.7
+  - eeg_positions =2.1.1
   # MRI
   - fsleyes =1.13.0
   - dcm2niix =1.0.20241208
@@ -133,7 +134,7 @@ specs:
   - pandas =2.2.3
   - polars =1.17.1
   - scipy =1.14.1
-  - openblas =0.3.27  # allow_outdated, scipy / numpy not updated yet
+  - openblas =0.3.28
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
   - jupyterlab =4.3.3
@@ -159,9 +160,9 @@ specs:
   # Viz
   # matplotilb is just matplotlib-base, tornado, and pyqt
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  - matplotlib-base =3.9.2  # allow_outdated
+  - matplotlib-base =3.9.3
   - tornado =6.4.2
-  - pyside6 =6.7.3=*_1  # allow_outdated, 6.8.0.1 has a star-import bug
+  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0
   - qt6-main =6.7.3  # allow_outdated
   - ipympl =0.9.4
   - qtpy =2.4.2
@@ -203,7 +204,7 @@ specs:
   - graphviz =12.0.0
   - python-graphviz =0.20.3
   - selenium =4.27.1
-  - sphinx =7.4.7  # allow_outdated, sphinx-design not 8.0 compatible
+  - sphinx =8.1.3
   - sphinx-design =0.6.1
   - sphinx-gallery =0.18.0
   - sphinxcontrib-bibtex =2.6.3
@@ -213,9 +214,9 @@ specs:
   # OS-specific
   - git =2.47.1  # [win]
   - make =4.4.1  # [win]
-  - pyobjc-core =10.3.1  # allow_outdated  # [osx]
-  - pyobjc-framework-Cocoa =10.3.1  # allow_outdated  # [osx]
-  - pyobjc-framework-FSEvents =10.3.1  # allow_outdated  # [osx]
+  - pyobjc-core =10.3.2  # [osx]
+  - pyobjc-framework-Cocoa =10.3.2  # [osx]
+  - pyobjc-framework-FSEvents =10.3.2  # [osx]
 condarc:
   channels:
     - conda-forge
