--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -59,7 +59,8 @@ specs:
   # Python
   - python =3.12.7  # allow_outdated
   - pip =24.3.1
-  - conda =24.11.1
+  - wheel =0.45.1
+  - conda =24.11.0  # allow_outdated, https://github.com/conda-forge/conda-feedstock/pull/247#issuecomment-2549103813
   - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
@@ -162,7 +163,7 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.10.0
   - tornado =6.4.2
-  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0
+  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0 https://github.com/conda-forge/vtk-feedstock/pull/357
   - qt6-main =6.7.3  # allow_outdated
   - ipympl =0.9.4
   - qtpy =2.4.2
