--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -59,7 +59,8 @@ specs:
   # Python
   - python =3.12.7  # allow_outdated
   - pip =24.3.1
-  - conda =24.11.0
+  - wheel =0.45.1
+  - conda =24.11.0  # allow_outdated, https://github.com/conda-forge/conda-feedstock/pull/247#issuecomment-2549103813
   - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
@@ -88,7 +89,7 @@ specs:
   - mne-lsl =1.8.0
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
-  - antio =0.4.0
+  - antio =0.5.0
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -160,9 +161,9 @@ specs:
   # Viz
   # matplotilb is just matplotlib-base, tornado, and pyqt
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  - matplotlib-base =3.9.4
+  - matplotlib-base =3.10.0
   - tornado =6.4.2
-  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0
+  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0 https://github.com/conda-forge/vtk-feedstock/pull/357
   - qt6-main =6.7.3  # allow_outdated
   - ipympl =0.9.4
   - qtpy =2.4.2
@@ -200,7 +201,7 @@ specs:
   - vulture =2.14
   # Doc building
   - numpydoc =1.8.0
-  - pydata-sphinx-theme =0.16.0
+  - pydata-sphinx-theme =0.16.1
   - graphviz =12.0.0
   - python-graphviz =0.20.3
   - selenium =4.27.1
