--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -101,7 +101,7 @@ specs:
   - tensorpac =0.6.5
   - emd =0.7.0
   - neurodsp =2.2.0
-  - bycycle =1.1.0
+  # - bycycle =1.1.0  # TODO: broken with latest SciPy
   - fooof =1.0.0
   # Microstates
   - mne-microstates =0.3.0
