--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -122,7 +122,7 @@ specs:
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
-  - python-neo =0.13.4
+  # - python-neo =0.13.4  # TODO: Not NumPy 2.0 compatible yet
   - nitime =0.11
   - snirf =0.8.0
   # <<< END RELATED SOFTWARE LIST >>>
