--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -109,8 +109,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # - sleepecg =0.5.8  # TODO: not NumPy 2.0 compatible yet
-  - yasa =0.6.5
+  # - sleepecg =0.5.8  # TODO: not NumPy 2.0 compatible yet because of wfdb
+  # - yasa =0.6.5  # TODO: not NumPy 2.0 compatible yet because of sleepecg
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
