--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -90,6 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
+  - wfdb =4.1.2
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
