--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -188,7 +188,7 @@ specs:
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
   - ruff =0.9.2
-  - uv =0.5.22
+  - uv =0.5.21  # allow_outdated, windows bild problems
   - check-manifest =0.50
   - codespell =2.4.0
   - py-spy =0.4.0
