--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -90,6 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
+  - wfdb =4.1.2
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -187,13 +188,13 @@ specs:
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
   - ruff =0.9.2
-  - uv =0.5.21
+  - uv =0.5.21  # allow_outdated, windows bild problems
   - check-manifest =0.50
-  - codespell =2.3.0
+  - codespell =2.4.0
   - py-spy =0.4.0
   - line_profiler =4.1.3
   - memory_profiler =0.61.0
-  - twine =6.0.1
+  - twine =6.1.0
   - hatchling =1.27.0
   - hatch-vcs =0.4.0
   - mypy =1.14.1
@@ -204,7 +205,7 @@ specs:
   - pydata-sphinx-theme =0.16.1
   - graphviz =12.0.0
   - python-graphviz =0.20.3
-  - selenium =4.27.1
+  - selenium =4.28.0
   - sphinx =8.1.3
   - sphinx-design =0.6.1
   - sphinx-gallery =0.18.0
