MAINT: Streamline import tests (#329)
Co-authored-by: Daniel McCloy <dan@mccloy.info>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,6 +158,7 @@ jobs:
         with:
           qt: true
           pyvista: false
+          wm: false
       - run: ./tools/check_installation.sh
 
   test_linux:
@@ -189,6 +190,7 @@ jobs:
         with:
           qt: true
           pyvista: false
+          wm: false
       - run: ./tools/check_installation.sh
 
   test_windows:
@@ -223,6 +225,7 @@ jobs:
         with:
           qt: true
           pyvista: false
+          wm: false
       - run: ./tools/check_installation.sh
         timeout-minutes: 5  # < 2 min even on Windows
 
