--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -60,8 +60,8 @@ specs:
   - python =3.12.7  # allow_outdated, vtk
   - pip =25.0
   - wheel =0.45.1
-  - conda =25.1.0
-  - mamba =2.0.5
+  - conda =25.1.1
+  - mamba =2.0.6
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -90,7 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
-  # - wfdb =4.2.0  # TODO: 4.2.0 not on CF yet https://github.com/conda-forge/wfdb-feedstock/pull/29
+  - wfdb =4.2.0
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -101,7 +101,7 @@ specs:
   - pactools =0.3.1
   - tensorpac =0.6.5
   - emd =0.8.0
-  - neurodsp =2.2.0
+  # - neurodsp =2.2.0  # TODO: broken with latest SciPy
   # - bycycle =1.1.0  # TODO: broken with latest SciPy
   - fooof =1.0.0
   # Microstates
@@ -110,16 +110,17 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # - sleepecg =0.5.8  # TODO: Not NumPy 2.0 compatible yet
-  # - yasa =0.6.5  # TODO: Needs sleepecg
+  - sleepecg =0.5.9=*_2
+  - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
-  - mnelab =0.9.2
+  - mnelab =1.0.0
   # other
   - pyriemann =0.7
   - pyprep =0.4.3=*_1
   - python-picard =0.8
   - pybv =0.7.6
+  - edfio =0.4.5
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
@@ -129,6 +130,7 @@ specs:
   # <<< END RELATED SOFTWARE LIST >>>
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
+  - antropy =0.1.9
   - mayavi =4.8.2=pyside6_*
   - traitsui =8.0.0
   - pyface =8.0.0=*_1
@@ -145,7 +147,7 @@ specs:
   - spyder-kernels =3.0.2
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
-  # spyder =5.5.5
+  # spyder =6.1.0
   - darkdetect =0.8.0
   - qdarkstyle =3.2.3
   - numba =0.61.0
@@ -170,7 +172,7 @@ specs:
   - ipympl =0.9.6
   - qtpy =2.4.2
   - seaborn =0.13.2
-  - plotly =5.24.1
+  - plotly =6.0.0
   - vtk =9.3.1=qt*
   - ipywidgets =8.1.5
   - pyvista =0.44.2
@@ -181,15 +183,15 @@ specs:
   - termcolor =2.5.0
   - defusedxml =0.7.1
   # Development
-  - gh =2.65.0
+  - gh =2.66.1
   - setuptools_scm =8.1.0
   - pytest =8.3.4
   - pytest-cov =6.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
-  - ruff =0.9.3
-  - uv =0.5.25
+  - ruff =0.9.4
+  - uv =0.5.27
   - check-manifest =0.50
   - codespell =2.4.1
   - py-spy =0.4.0
@@ -204,7 +206,7 @@ specs:
   # Doc building
   - numpydoc =1.8.0
   - pydata-sphinx-theme =0.16.1
-  - graphviz =12.0.0
+  - graphviz =12.0.0  # allow_outdated, conflicts with PySide6 6.7.3
   - python-graphviz =0.20.3
   - selenium =4.28.1
   - sphinx =8.1.3
