Revert "TST: Fix"
This reverts commit 7772a0ace668c5d1e08414d49b205bfe0d7c600d.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
   # Build installers
   build_macos:
     name: Build (${{ matrix.os }})
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -71,6 +72,7 @@ jobs:
   build_linux:
     name: Build (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -108,7 +110,6 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
-      - run: conda install -c conda-forge -y "nsis==3.08"
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
         timeout-minutes: 20
@@ -144,6 +145,9 @@ jobs:
         with:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
       - name: Run installer
+        env:
+          CONDA_QUIET: 0
+          CONDA_VERBOSITY: 3
         run: |
           sudo installer -verbose -pkg ${MNE_INSTALLER_NAME} -target / \
             || ( tail -n 30 /var/log/install.log  && exit 1 ) # display last log messages on error
@@ -178,7 +182,11 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
-      - run: sh ./${MNE_INSTALLER_NAME} -b
+      - name: Run installer
+        env:
+          CONDA_QUIET: 0
+          CONDA_VERBOSITY: 3
+        run: sh ./${MNE_INSTALLER_NAME} -b
       - run: ./tools/export_frozen_env_def.sh
       - uses: actions/upload-artifact@v4
         with:
@@ -199,7 +207,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, windows-2022]
+        os: [windows-2022]  # [windows-2019, windows-2022]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -211,9 +219,13 @@ jobs:
         with:
           name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
       # https://docs.anaconda.com/anaconda/install/silent-mode.html#windows
-      - run: .\%MNE_INSTALLER_NAME% /S /InstallationType=JustMe /AddToPath=1
+      - name: Run installer
         timeout-minutes: 30
         shell: cmd
+        env:
+          CONDA_QUIET: 0
+          CONDA_VERBOSITY: 3
+        run: .\%MNE_INSTALLER_NAME% /S /InstallationType=JustMe /AddToPath=1
       - run: ./tools/export_frozen_env_def.sh
       - uses: actions/upload-artifact@v4
         with:
