--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -85,14 +85,14 @@ specs:
   - ipykernel =6.29.5
   - spyder-kernels =3.0.3
   - darkdetect =0.8.0
-  # - qdarkstyle =3.2.3
-  # - cython =3.0.12
-  # - pyxdf =1.17.0
-  # - openpyxl =3.1.5
-  # - xlrd =2.0.1
-  # - pingouin =0.5.5
-  # - questionary =2.1.0
-  # - pqdm =0.2.0
+  - qdarkstyle =3.2.3
+  - cython =3.0.12
+  - pyxdf =1.17.0
+  - openpyxl =3.1.5
+  - xlrd =2.0.1
+  - pingouin =0.5.5
+  - questionary =2.1.0
+  - pqdm =0.2.0
   # - astropy =7.0.1
   # - matplotlib-base =3.10.0
   # - tornado =6.4.2
